--- a/blocks/profile-info/__status/profile-info__status.css
+++ b/blocks/profile-info/__status/profile-info__status.css
@@ -11,6 +11,6 @@
     .profile-info__status{
         font-size: 14px;
         line-height: 17px;
-        text-align: center
+        text-align: center;
     }
 }
