--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -10,4 +10,13 @@
     text-align: center;
     border-radius: 2px;
     padding: 0;
+    margin-top: 48px;
+}
+
+@media screen and (max-width: 700px) {
+    .header{
+        font-size: 14px;
+        line-height: 17px;
+        margin-top: 45px;
+    }
 }
