--- a/blocks/profile-info/__name/profile-info__name.css
+++ b/blocks/profile-info/__name/profile-info__name.css
@@ -6,8 +6,10 @@
     font-size: 42px;
     line-height: 48px;
     grid-area: profile-info__name;
-    display: flex;
-    justify-content: end;
+    max-width: 400px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 700px){
