--- a/blocks/profile-info/__status/profile-info__status.css
+++ b/blocks/profile-info/__status/profile-info__status.css
@@ -5,6 +5,10 @@
     line-height: 22px;
     margin: 0;
     grid-area: profile-info__status;
+    max-width: 400px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 700px){
