--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -14,7 +14,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .header{
+    .popup__submit-button{
         font-size: 14px;
         line-height: 17px;
         margin-top: 45px;
