--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -1,5 +1,5 @@
 .add-button{
-    background-image: url(../../../images/add-button/add-button.svg);
+    background-image: url(../../images/add-button/add-button.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: #000;
