--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,8 +1,9 @@
 .element__image{
     object-fit: cover;
-    max-height: 282px;
+    min-height: 282px;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
