--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,3 +1,3 @@
 .element__like_active{
-    opacity: .1;
+    background-image: url(../../../../images/element/__like/_active/element__like_active.svg);
 }
