--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -7,8 +7,8 @@
     border-radius: 10px;
     overflow: hidden;
     width: 100%;
-    height: 100%; 
-    position: relative
+    height: 100%;
+    position: relative;
 }
 
 @media screen and (max-width: 900px) {
