--- a/pages/index.css
+++ b/pages/index.css
@@ -25,7 +25,8 @@ TODO list:
 
 
 /* TODO list (new):
-21. Решить проблему с открывающимся попапом картинки, все ломается, если раскоментиовать прошлый рабочий код
+21. !DONE! Решить проблему с открывающимся попапом картинки, все ломается, если раскоментиовать прошлый рабочий код
+22. Высота картинок ломается - неодинаковая, надо поправить
 */
 
 @import url(../vendor/normalize.css);
@@ -71,6 +72,15 @@ TODO list:
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/image-popup/image-popup.css);
+@import url(../blocks/image-popup/__container/image-popup__container.css);
+
+@import url(../blocks/card-image/card-image.css);
+@import url(../blocks/card-image/_popup/card-image_popup.css);
+
+@import url(../blocks/card-text/card-text.css);
+@import url(../blocks/card-text/_popup/card-text_popup.css);
 
 @import url(../blocks/close-button/close-button.css);
 @import url(../blocks/close-button/_type_image-popup/close-button_type_image-popup.css);
