fix: исправить ошибки после первого ревью

--- a/pages/index.css
+++ b/pages/index.css
@@ -26,7 +26,7 @@ TODO list:
 
 /* TODO list (new):
 21. !DONE! Решить проблему с открывающимся попапом картинки, все ломается, если раскоментиовать прошлый рабочий код
-22. Высота картинок ломается - неодинаковая, надо поправить
+22. Высота картинок ломается - неодинаковая, надо поправить.
 */
 
 @import url(../vendor/normalize.css);
