--- a/pages/index.css
+++ b/pages/index.css
@@ -66,7 +66,10 @@ TODO list:
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css);
 @import url(../blocks/popup/__item/popup__item.css);
+@import url(../blocks/popup/__item/_error/popup__item_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 
 @import url(../blocks/image-popup/image-popup.css);
