--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -14,13 +14,15 @@
 
 @media screen and (max-width: 900px) {
     .element{
+        height: 500px;
         max-height: none;
-        min-height: 361px;
     }
 }
 
+
 @media screen and (max-width: 330px) {
     .element{
+        height: auto;
         max-height: 361px;
     }
 }
