--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -10,12 +10,15 @@
     height: 100%;
     position: relative;
     color: #000;
+    max-width: 282px;
+    margin: auto;
 }
 
 @media screen and (max-width: 900px) {
     .element{
         height: 500px;
         max-height: none;
+        max-width: 500px;
     }
 }
 
